--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <div class="row">
 
-            <div class="box-container">
+            <!-- <div class="box-container">
                 <div class="box">
                     <h3>2+</h3>
                     <p>years of experience</p>
@@ -85,10 +85,10 @@
                     <h3>10+</h3>
                     <p>awards won</p>
                 </div>
-            </div>
+            </div> -->
     
             <div class="content">
-                <h3>my name is <span>shaikh anas</span></h3>
+                <h3>my name is <span>Adnan Aslam</span></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil hic eum magnam, ea nulla sit cumque explicabo dolorem illo itaque?</p>
                 <a href="#" class="btn">contact me</a>
             </div>
@@ -98,15 +98,19 @@
         <div class="row">
 
             <div class="progress">
+                <h3> flutter <span>75%</span> </h3>
+                <div class="bar bar-1-0"><span></span></div>
                 <h3> web design <span>90%</span> </h3>
                 <div class="bar bar-1-1"><span></span></div>
-                <h3> graphic design <span>75%</span> </h3>
+                <h3> graphic design <span>85%</span> </h3>
                 <div class="bar bar-1-2"><span></span></div>
-                <h3> UI/UX design <span>80%</span> </h3>
+                <h3> Java <span>80%</span> </h3>
                 <div class="bar bar-1-3"><span></span></div>
             </div>
     
             <div class="progress">
+                <h3> Python <span>65%</span> </h3>
+                <div class="bar bar-2-0"><span></span></div>
                 <h3> HTML <span>95%</span> </h3>
                 <div class="bar bar-2-1"><span></span></div>
                 <h3> CSS <span>80%</span> </h3>
