--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
                 <div class="bar bar-1-4"><span></span></div>
                 <h3> red hat enterprise linux (RHEL) <span>50%</span> </h3>
                 <div class="bar bar-1-5"><span></span></div>
+                <h3 style="visibility:hidden;"> wordpress<span>0%</span> </h3>
+                <div class="bar bar-1-6" style="visibility: hidden;"><span></span></div>
             </div>
     
             <div class="progress">
@@ -257,11 +259,11 @@
     <h1 class="heading"> <span>contact</span> me </h1>
 
     <form action="">
-        <input type="text" placeholder="your name" class="box">
-        <input type="email" placeholder="your email" class="box">
-        <input type="text" placeholder="subject" class="box">
-        <textarea name="" class="box" placeholder="your message" id="" cols="30" rows="10"></textarea>
-        <input type="submit" value="send message" class="btn">
+        <input type="text" placeholder="Your Name" class="box">
+        <input type="email" placeholder="Your Email" class="box">
+        <input type="text" placeholder="Subject" class="box">
+        <textarea name="" class="box" placeholder="Your Message" id="" cols="30" rows="10"></textarea>
+        <input type="submit" value="Send Message" class="btn">
     </form>
 
 </section>
