--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- custom css link  -->
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="icon" type="image/png" sizes="32x32" href="image/icons/favicon-32x32.png">
+
 </head>
 <body>
     <!-- header sections starts -->
@@ -47,7 +49,7 @@
         <div class="content">
             <h3>Adnan Aslam</h3>
             <p>i am a flutter developer</p>
-            <a href="#" class="btn">download cv</a>
+            <a href="download/resume.docx" download="adnan_aslam.docx" class="btn">download cv</a>
         </div>
 
         <div class="share">
@@ -207,14 +209,17 @@
         <div class="box">
             <img src="image/adnan.jpg" alt="">
             <div class="content">
-                <h3>project 01</h3>
+                <h3>my logo</h3>
             </div>
         </div>
 
         <div class="box">
-            <img src="image/img-2.jpg" alt="">
+            <img src="image/logo_mulm.png" alt="">
             <div class="content">
-                <h3>project 02</h3>
+                <h3>Mulm Traders</h3>
+                <p>The goal of this project was to create a local area trading application for Mulm Industries,
+                    who sell whole-sale merchandise to local markets.
+                </p>
             </div>
         </div>
 
