--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
         <div class="row">
 
             <div class="progress">
-                <h3> flutter <span>75%</span> </h3>
+                <h3> android app development <span>80%</span> </h3>
                 <div class="bar bar-1-0"><span></span></div>
-                <h3> graphic design <span>90%</span> </h3>
+                <h3> flutter app development <span>70%</span> </h3>
                 <div class="bar bar-1-1"><span></span></div>
-                <h3> web developement <span>85%</span> </h3>
+                <h3> graphic designing<span>90%</span> </h3>
                 <div class="bar bar-1-2"><span></span></div>
-                <h3> android <span>70%</span> </h3>
+                <h3> web development <span>85%</span> </h3>
                 <div class="bar bar-1-3"><span></span></div>
                 <h3> artificial intelligence <span>60%</span> </h3>
                 <div class="bar bar-1-4"><span></span></div>
@@ -157,39 +157,47 @@
     <div class="box-container">
 
         <div class="box">
+            <i class="fas fa-mobile"></i>
+            <h3>Android app development</h3>
+            <p>I have excellent expertise in Firebase,Room,MVVM,
+                bestUI/UX design,location services,API,third party
+                API and database.</p>
+        </div>
+
+        <div class="box">
             <i class="fas fa-desktop"></i>
-            <h3>flutter developement</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <h3>Flutter App development</h3>
+            <p>I have expertise in design of UI/UX in flutter app
+                and web development.I have experience in e-commerce,
+                multi vendor.</p>
         </div>
 
         <div class="box">
             <i class="fas fa-paint-brush"></i>
-            <h3>graphic designing</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
-        </div>
-
-        <div class="box">
-            <i class="fas fa-mobile"></i>
-            <h3>android developement</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <h3>Graphic Designing</h3>
+            <p>I have experience in working with multiple tools like:Adobe Photoshop,
+                Adobe Illustrator,Adobe XD,Adobe Premier Pro,
+                Figma, and Blender.</p>
         </div>
 
         <div class="box">
             <i class="fas fa-code"></i>
-            <h3>web developement</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <h3>web development</h3>
+            <p>I am an experienced web designer and developer in
+                HTML, CSS, Bootstrap, Javascript and PHP.</p>
         </div>
 
         <div class="box">
             <i class="fas fa-laptop"></i>
             <h3>responsive design</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>Providing you the best responsive design in all type of application is always the priority.
+            </p>
         </div>
 
         <div class="box">
-            <i class="fab fa-wordpress"></i>
-            <h3>wordpress</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <i class="fas fa-code"></i>
+            <h3>api development</h3>
+            <p>I'm experienced in creating apis in PHP. I can create api from basic to advance using simple PHP.</p>
         </div>
 
     </div>
@@ -224,30 +232,47 @@
         </div>
 
         <div class="box">
-            <img src="image/img-3.jpg" alt="">
+            <img src="image/logo_mulm.png" alt="">
             <div class="content">
-                <h3>project 03</h3>
+                <h3>Mulm Traders</h3>
+                <p>
+                    This Project also belongs to Mulm Traders. This project was a complete inventory system of
+                    Mulm Traders consisting of total 5 applications.
+                </p>
             </div>
         </div>
 
         <div class="box">
-            <img src="image/img-4.jpg" alt="">
+            <img src="image/cab5.jpg" alt="">
             <div class="content">
-                <h3>project 04</h3>
+                <h3>Cab5</h3>
+                <p>
+                    It was taxi booking application for city or out of the city. It worked on Mapbox to define
+                    the location of passenger and driver. Passenger can easily pick a pickup and drop location and
+                    price calculated according to distance.
+                </p>
             </div>
         </div>
 
         <div class="box">
-            <img src="image/img-5.jpg" alt="">
+            <img src="image/olympia.jpg" alt="">
             <div class="content">
-                <h3>project 05</h3>
+                <h3>Olympia</h3>
+                <p>
+                    It's a gaming app that show the all information of about player like it's score, current events,
+                    coming events, played events, prizes etc.
+                </p>
             </div>
         </div>
 
         <div class="box">
-            <img src="image/img-6.jpg" alt="">
+            <img src="image/bitcoin.jpg" alt="">
             <div class="content">
-                <h3>project 06</h3>
+                <h3>Crypto Signals</h3>
+                <p>
+                    This app was a clone of an already working application called Crypto Signals currently available on
+                    Google Playstore.
+                </p>
             </div>
         </div>
 
