--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a href="https://twitter.com/adnanaslam096" target="_blank" class="fab fa-twitter"></a>
             <a href="https://www.instagram.com/adnandani7272/" target="_blank" class="fab fa-instagram"></a>
             <a href="https://www.linkedin.com/in/adnan-aslam-aa98a1157/" target="_blank" class="fab fa-linkedin"></a>
-            <a href="https://www.pinterest.com/adnanaslam096/" target="_blank" class="fab fa-behance"></a>
+            <a href="https://github.com/aDarkRider" target="_blank" class="fab fa-github"></a>
         </div>
 
     </section>
@@ -77,7 +77,7 @@
                     <p>year of experience</p>
                 </div>
                 <div class="box">
-                    <h3>5+</h3>
+                    <h3>10+</h3>
                     <p>satisfied clients</p>
                 </div>
                 <div class="box">
@@ -139,7 +139,7 @@
                 <div class="bar bar-2-4"><span></span></div>
                 <h3> javascript <span>70%</span> </h3>
                 <div class="bar bar-2-5"><span></span></div>
-                <h3> SQL <span>65%</span> </h3>
+                <h3> SQL <span>75%</span> </h3>
                 <div class="bar bar-2-6"><span></span></div>
             </div>
     
