--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="content">
             <h3>Adnan Aslam</h3>
             <p>i am a flutter developer</p>
-            <a href="download/resume.docx" download="adnan_aslam.docx" class="btn">download cv</a>
+            <a href="download/adnan.pdf" download="adnan_aslam.pdf" target="_blank" class="btn">download cv</a>
         </div>
 
         <div class="share">
@@ -92,7 +92,7 @@
     
             <div class="content">
                 <h3>my name is <span>Adnan Aslam</span></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil hic eum magnam, ea nulla sit cumque explicabo dolorem illo itaque?</p>
+                <p>I'm Full Stack Mobile App Developer.</p>
                 <a href="#" class="btn">contact me</a>
             </div>
     
