--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="user">
             <img src="image/myimage.jpg" alt="">
             <h3>Adnan Aslam</h3>
-            <p>flutter developer</p>
+            <p>mobile app developer</p>
         </div>
         
         <nav class="navbar">
@@ -48,7 +48,7 @@
 
         <div class="content">
             <h3>Adnan Aslam</h3>
-            <p>i am a flutter developer</p>
+            <p>i am a mobile app developer</p>
             <a href="download/adnan.pdf" download="adnan_aslam.pdf" target="_blank" class="btn">download cv</a>
         </div>
 
